# magic_mapper

./: README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt
.github/workflows/: ci.yaml  release.yaml
src/: magic.py  magicmapper.py
src/magicmapper/: __init__.py
src/magicmapper/tests/: test_magic.py
tests/: test_magic.py
