[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools-git-versioning<2"
]
build-backend = "setuptools.build_meta"

[project]
name = "magicmapper"
authors = [
    {name = "Matti Eiden", email = "snaipperi@gmail.com"},
]
description = "Mapping data structures"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["data", "mapping"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]
[tool.setuptools-git-versioning]
enabled = true