[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "setuptools-git-versioning<2"
]
build-backend = "setuptools.build_meta"

[project]
name = "magicmapper"
authors = [
    {name = "Matti Eiden", email = "snaipperi@gmail.com"},
]
description = "Mapping data structures"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["data", "mapping"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dynamic = ["version"]
[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.post{ccount}"